# yt-dlp-gui

./: .gitignore  BUILD.md  INVESTIGATION_REPORT.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.preload.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: バグ報告---bug-report.md  機能提案---feature-request.md
.github/workflows/: release.yml
ChangeLogs/: v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md
Releases/: v1.0.0.md  v1.1.0.md
electron/: main.js  main.ts  preload.js  preload.ts
shared/: contracts.ts
src/: App.js  App.tsx  index.css  main.js  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binaries.rs  lib.rs  utils.rs  ytdlp.rs
src/components/: AdvancedOptions.js  AdvancedOptions.tsx  DownloadHistory.js  DownloadHistory.tsx  FormatSelector.js  FormatSelector.tsx  LocationSelector.js  LocationSelector.tsx  QueueList.js  QueueList.tsx  SettingsModal.js  SettingsModal.tsx  StatusToast.js  StatusToast.tsx  UrlInput.js  UrlInput.tsx  VideoPreview.js  VideoPreview.tsx
src/i18n/: index.js  index.tsx  translations.js  translations.ts
src/lib/: tauri.ts
src/types/: Preset.ts  electron.d.ts  options.ts
