[package]
name = "app"
version = "1.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-http = "2.5.4"
tauri-plugin-process = "2.3.1"
reqwest = { version = "0.12.28", features = ["json", "blocking", "stream"] }
zip = "4.2.0"
encoding_rs = "0.8.35"
which = "8.0.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3"
tauri-plugin-updater = "2.9.0"
